syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.smartclassroom";
option java_outer_classname = "ProjectorProto";


//  Projector Service Interface Definition
service ProjectorService {
    // Unary RPC：get projector state
    rpc GetProjectorStatus (GetProjectorStatusRequest) returns (ProjectorStatus) {}

    // Client Streaming RPC：control of projector
    rpc ControlProjectors (stream ControlProjectorRequest) returns (ProjectorControlResponse) {}

}

// request message to get projector status
message GetProjectorStatusRequest {}

// projector status message
message ProjectorStatus {
    string name = 1; // projector name
    bool is_on = 2;  // projector on or off
}
// request message for control of projector
message ControlProjectorRequest {
    bool turn_on = 1;
}
// response message for control projector
message ProjectorControlResponse {
    bool success = 1;
}

